Refactor: Item 이미지 메타데이터 조인 (N + 1) 헤결 리팩토링